# face-mask-detection

./: .gitignore  Lightweight_FM_Detection.txt  README.md  ReadMe.md  hello.py  pyproject.toml  pyproject.toml.save  remove_duplicates.ipynb  resizevid.ipynb  test.ipynb  yolo_tracking.py
training/: effnet_train.ipynb  effnet_train_frozen.ipynb  effnet_train_notfrozen.ipynb  eval.py  hybrid_model_train.ipynb  hybrid_model_train_mbconv.ipynb  hybrid_model_train_mbconv_largebatch.ipynb  hybrid_model_train_mbconv_mlp.ipynb  hybrid_model_train_simple_base.ipynb  models.py  preprocessing.py
training/checkpoints/: fcn_mbconv.keras  fcn_mbconv.weights.h5  fcn_mbconv_250epoch_.weights.h5  fcn_mbconv_largebatchsize.weights.h5  hybridfcnmlp.keras
