[project]
name = "face-mask-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deep-sort-realtime>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "keras>=3.8.0",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numpy==2.0.2",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "plotnine>=0.14.5",
    "safetensors>=0.5.2",
    "scikit-image>=0.25.0",
    "scikit-learn==1.5.2",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "tensorflow==2.18",
    "tf-metric-learning>=1.0.12",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "ultralytics>=8.3.23",
    "xgboost>=2.1.3",
]
